# AoC

./: .gitattributes  .gitignore  README.md  cls
2025/day1/: compute_password.py  compute_password2.py
2025/day2/: find_silly_ids.py  find_silly_ids2.c  pseudocode.txt
2025/day3/: compute_total_joltage.pseudo.txt  compute_total_joltage2.html  compute_total_joltage2.js  compute_total_joltage_pseudo.txt
2025/day4/: count_accessible_rolls.slang  count_accessible_rolls2.slang  io.slang  list.slang  memory.slang
2025/day5/count_fresh_ingredients/: Cargo.toml
2025/day5/count_fresh_ingredients/src/: main.rs  self_aware_iterator.rs
2025/day6/cephalopod_math/: CMakeLists.txt  build_commands.bat  vk_validation_log.txt
2025/day6/cephalopod_math/include/: housekeeper.hpp  struct_builder.hpp  vk_utilities.hpp
2025/day6/cephalopod_math/src/: CMakeLists.txt  main.cpp  vk_utilities.cpp
2025/day6/cephalopod_math/src/shaders/: cephalopod_math.glsl.comp  cephalopod_math.spv
2025/day6/cephalopod_math2/: cephalopod_math2.sln
2025/day6/cephalopod_math2/cephalopod_math2/: cephalopod_math2.csproj  main.cs
2025/day6/cephalopod_math2/cephalopod_math2/Properties/: AssemblyInfo.cs
2025/day7/: test.txt
2025/day7/tachyon_splitter/: index.html  script.js  transport_tachyons.pseudo.txt  transport_tachyons.wasm  transport_tachyons.wat
